# api_yamdb

./: .gitignore  .python-version  README.md  db — копия.sqlite3  pyproject.toml  requirements.txt
api/: admin.py  filters.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/management/commands/: add_categories.py  add_genres.py  add_genretitle.py  add_titles.py  add_users.py  fill_data.py
api/migrations/: 0001_initial.py  0002_auto_20200925_1525.py  0002_auto_20200929_1532.py  0002_auto_20200929_1911.py  0002_auto_20201009_1323.py  0002_auto_20201015_1053.py  0003_auto_20200925_1528.py  0003_auto_20200929_1548.py  0003_auto_20201009_1348.py  0004_auto_20200925_1533.py  0004_auto_20201009_1414.py  0004_merge_20200930_1309.py  0004_merge_20201001_0008.py  0005_auto_20200927_1352.py  0005_auto_20200930_1324.py  0005_auto_20201001_0012.py  0005_auto_20201009_1418.py  0006_auto_20200927_1409.py  0006_auto_20200930_1328.py  0007_auto_20200930_1340.py  0008_auto_20200930_1402.py  0009_merge_20201001_1722.py  0010_auto_20201002_1331.py
api_yamdb/: settings.py  urls.py
data/: comments.csv  review.csv
