[tool.poetry]
name = "api_yamdb"
version = "0.1.0"
description = ""
authors = ["Denis S. <makafonov@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
Django = "^3.1.2"
djangorestframework = "^3.12.1"
pytest-django = "^3.10.0"
django-cors-headers = "^3.5.0"
django-filter = "^2.4.0"
djangorestframework-simplejwt = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
