[tool.poetry]
name = "api_yamdb"
version = "0.1.0"
description = ""
authors = ["Denis S. <makafonov@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
Django = "^3.1.2"
djangorestframework = "^3.12.1"
pytest-django = "^3.10.0"
django-cors-headers = "^3.5.0"
django-filter = "^2.4.0"
djangorestframework-simplejwt = {version = "^4.4.0", python = ">=3.8,<3.9"}

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
flake8 = "^3.8.4"
isort = "^5.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# known_first_party = "api_yamdb"
known_third_party = ["Django", "djangorestframework"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true
skip = "test1.py"
skip_glob = ["*/migrations/*", "*/node_modules/*"]
